resources/k8s/docs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docs
  labels:
    app: docs

spec:
  selector:
    app: docs

  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP

  type: ClusterIP
