resources/k8s/docs/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: docs

spec:
  to:
    kind: Service
    name: docs

  port:
    targetPort: http
